--- a/css/css.css
+++ b/css/css.css
@@ -5,39 +5,88 @@ body {
 
 ul {
     list-style: none;
-    
 }
-
-li {
-    color: aqua;
-}
-
 a {
     color: black;
     font-weight: 500;
 }
-
-a:hover {
+h6{
+    font-size: 13px;
+}
+#mn:hover {
     color: rgb(29, 27, 139);
-    font-size: 15px;
+    font-size: 14px;
     font-weight: 500;
     border-radius: 2px;
     border-bottom: 5px solid rgb(29, 27, 139);
 }
 
-#ft {
-    width: 100%;
+#logoD {
+    width: 50%;
     height: auto;
-    padding: auto;
-    background-color: #fff;
-    
-    /* border-radius: 1px; */
-    /* border: solid burlywood 1px; */
+    float: center;
 }
 
-#logoD {
+#ca_img{
     width: auto;
-    height: 100px;
+    height: 300px;
     float: center;
+    image-resolution: initial;
+}
 
+
+
+#ft {
+    text-align: center;
+    width: 100%;
+    height: auto;
+    background-color: #ccc;
+    margin-top: 50px;
+    padding-top: 10px;
+    padding-bottom: 1px;
+    box-shadow: 2px 2px 4px #dfdbdb;
+}
+
+
+/* nav {
+    background-color: #273c75;
+} */
+
+#main-menu {
+    display: flex;
+}
+
+nav #main-menu li a {
+    color: #52525e;
+    text-decoration: none;
+    display: block;
+    padding: 8px 15px;
+}
+
+nav #main-menu li:hover a {
+    background: #b9b7b7;
+    transition: all 0.3s;
+}
+
+#toggle {
+    display: none;
+    /* background:#b9b7b7; */
+    color: #52525e;
+    text-align: left;
+    padding: 10px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+    #main-menu {
+        flex-direction: column;
+        text-align: center;
+    }
+    #toggle {
+        display: block;
+    }
+    nav {
+        display: none;
+    }
 }
