--- a/css/css.css
+++ b/css/css.css
@@ -1,7 +1,7 @@
 /* class . - id # */
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    /* font-size: 16px; */
+    font-size: 16px;
 }
 
 ul {
@@ -14,9 +14,9 @@ a {
 h6{
     font-size: 13px;
 }
-/* #mn{
-    border: #b9b7b7;
-} */
+#mn{
+    font-size: 16px;
+}
 #mn:hover {
     color: rgb(56, 124, 226);
     font-weight: 500;
@@ -33,15 +33,6 @@ h6{
 #carousel_img{
     height: 450px;
 }
-@media screen and (max-width: 600px) {
-    #logoD{
-        width: 80%;
-    }
-    #carousel_img{
-        height: 175px;
-    }
-}
-
 #ca_img{
     width: auto;
     height: 300px;
@@ -50,16 +41,25 @@ h6{
 }
 
 #icon_mn{
-    width: 15px;
+    width: 24px;
     height: auto;
     float: left;
     margin-right: 5px;
 }
-/* li{
-    width: 160px;
-} */
-
-
+@media screen and (max-width: 600px) {
+    #logoD{
+        width: 80%;
+    }
+    #carousel_img{
+        height: 175px;
+    }
+    #mn{
+        font-size: 13px;
+    }
+    #icon_mn{
+        width: 15px;
+    }
+}
 
 #ft {
     text-align: center;
@@ -70,5 +70,75 @@ h6{
     padding-bottom: 1px;
     box-shadow: 2px 2px 4px #dfdbdb;
 }
+
+
+.topnav {
+    overflow: hidden;
+    /* background-color: #f8f9fa; */
+  }
+  
+  .topnav a {
+    float: left;
+    display: block;
+    color: rgb(127, 133, 131);
+    text-align: center;
+    padding: 5px 5px;
+    text-decoration: none;
+    /* font-size: 16px; */
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    text-decoration: none;
+    /* color: black; */
+  }
+  
+  .topnav a.active {
+    background-color: rgb(127, 133, 131);
+    color: white;
+  }
+  
+  .topnav .icon {
+    display: none;
+  }
+  
+  @media screen and (min-width: 600px) {
+    #menu_center {
+      display: flex;
+      justify-content: center;
+    }
+    #mn{
+      margin-left: 5px;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {
+      display: none;
+    }
+  
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {
+      position: relative;
+    }
+  
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+  
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
 
 
