--- a/css/css.css
+++ b/css/css.css
@@ -2,6 +2,7 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
+    /* background-color: black; */
 }
 
 ul {
@@ -71,20 +72,133 @@ h6 {
     }
 }
 
+#sty_ne {
+    background-color: #242044;
+    height: 400px;
+}
+
+#p_ne {
+    text-align: center;
+    color: aliceblue;
+    margin: 0px 0px 0px 0px;
+    font-size: 16px;
+    font-weight: 500;
+    margin-top: 20px;
+}
+
+#img_card {
+    width: auto;
+    height: 140px
+}
+
+#ch {
+    font-size: 13px;
+    font-weight: 600;
+}
+
+#ch1 {
+    font-size: 12px;
+}
+
+#card_news {
+    text-align: justify;
+    width: auto;
+    float: center;
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px #6e6767;
+    margin-top: 20px;
+}
+
+#card_news:hover {
+    box-shadow: 4px 4px 4px 4px #28a3eb;
+}
+
+#btn_dt {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media screen and (max-width: 600px) {
+    #dis1 {
+        display: none;
+    }
+
+    #dis2 {
+        width: 90%;
+        display: flex;
+    }
+
+    #p_ne {
+        text-align: center;
+        color: aliceblue;
+        margin: 0px 0px 0px 0px;
+        font-size: 13px;
+        font-weight: 500;
+        margin-top: 10px;
+    }
+
+    #card_news {
+        margin-top: 3px;
+        width: 100%;
+        /* height: 200px; */
+    }
+
+    #img_card {
+        height: 65px;
+    }
+
+    #ch {
+        font-size: 9px;
+        font-weight: 600;
+        margin-bottom: 0px;
+    }
+
+    #ch1 {
+        font-size: 7px;
+        margin: 0px 0px 5px;
+    }
+
+    #btn_a {
+        font-size: 7px;
+        width: 100%;
+    }
+
+    #sty_ne {
+        height: 230px;
+    }
+
+    #p_ne {
+        font-size: 10px;
+        font-weight: 500;
+        margin-top: 6px;
+    }
+}
+
 #ft_h {
     text-align: center;
     color: #0099FF;
     font-weight: 700;
     font-size: 20px;
     margin-top: 40px;
-    text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
+    text-shadow: 1px 0px 0px #fff, 0px 1px 1px #fff;
 }
-#ul_ft{
+
+#ul_ft {
     color: #810505;
-    float: left;  
-    font-size: 13px; 
-    text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
+    float: left;
+    font-size: 13px;
+    text-shadow: 1px 0px 0px #fff, 1px 1px 1px #fff;
 }
+
+#ft_bg {
+    box-shadow: 2px 2px 4px #dfdbdb;
+    background-image: url('../img/ft1.jpg');
+    filter: blur(1px);
+    -webkit-filter: blur(0px);
+    height: 200px;
+}
+
 #ft {
     text-align: center;
     width: 100%;
@@ -92,19 +206,45 @@ h6 {
     /* margin-top: 50px; */
     padding-top: 10px;
     padding-bottom: 1px;
-    box-shadow: 2px 2px 4px #dfdbdb;
+    /* box-shadow: 2px 2px 4px #dfdbdb; */
+}
+
+#ic_ft {
+    width: 40px;
+    border-radius: 15px;
+}
+
+#ic_ft1 {
+    width: 15px;
+    background-color: #810505;
+    border-radius: 5px;
+    padding: 2px;
 }
 
 @media screen and (max-width: 600px) {
     #ft_h {
         font-size: 13px;
     }
-    #ul_ft{
+
+    #ul_ft {
         padding: 0px 0px 0px 0px;
         color: #810505;
-        float: left;  
-        font-size: 10px; 
-        text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
+        float: left;
+        font-size: 10px;
+        text-shadow: 1px 0px 0px #fff, 1px 1px 1px #fff;
+    }
+
+    #ic_ft {
+        width: 20px;
+        border-radius: 5px;
+    }
+
+    #ft_bg {
+        height: 150px;
+    }
+
+    #ft_h {
+        margin-top: 20px;
     }
 }
 
