--- a/css/css_dcd.css
+++ b/css/css_dcd.css
@@ -12,6 +12,12 @@
   margin-left: 20px;
   margin-right: 20px;
 }
+#fr_map{
+  width: 100%;
+  /* height: auto; */
+  background-color: #424242; 
+}
+
 
 #sty_i {
   width: 80%;
@@ -45,4 +51,10 @@
   #tab3 {
     width: 100%;
   }
+  #fr_map {
+    width: 100%;
+    height: auto;
+    background-color: #424242;
+  }
+
 }
