--- a/css/css.css
+++ b/css/css.css
@@ -1,4 +1,5 @@
 /* class . - id # */
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
@@ -29,7 +30,6 @@ h6 {
     border-bottom: 2px solid rgb(56, 124, 226);
 }
 
-
 #logoD {
     width: 60%;
     height: auto;
@@ -58,15 +58,12 @@ h6 {
     #logoD {
         width: 80%;
     }
-
     #carousel_img {
         height: 175px;
     }
-
     #mn {
         font-size: 13px;
     }
-
     #icon_mn {
         width: 15px;
     }
@@ -77,11 +74,13 @@ h6 {
     height: auto;
     padding-bottom: 10px;
 }
+
 #sty_mapred {
     background-color: #242044;
     height: auto;
     padding-bottom: 10px;
 }
+
 #p_ne {
     text-align: center;
     color: aliceblue;
@@ -118,6 +117,7 @@ h6 {
 #card_news:hover {
     box-shadow: 4px 4px 4px 4px #28a3eb;
 }
+
 #card_mapred:hover {
     box-shadow: 4px 4px 4px 4px #e67a7a;
 }
@@ -128,8 +128,7 @@ h6 {
     align-items: center;
 }
 
-
-#sty_mapred{
+#sty_mapred {
     background-color: #810505;
     height: auto;
 }
@@ -138,12 +137,10 @@ h6 {
     #dis1 {
         display: none;
     }
-
     #dis2 {
         width: 90%;
         display: flex;
     }
-
     #p_ne {
         text-align: center;
         color: aliceblue;
@@ -153,33 +150,27 @@ h6 {
         margin-top: 5px;
         margin-bottom: 5px;
     }
-
     #card_news {
         margin-top: 3px;
         width: 100%;
         /* height: 200px; */
     }
-
     #img_card {
         height: 65px;
     }
-
     #ch {
         font-size: 9px;
         font-weight: 600;
         margin-bottom: 0px;
     }
-
     #ch1 {
         font-size: 7px;
         margin: 0px 0px 5px;
     }
-
     #btn_a {
         font-size: 7px;
         width: 100%;
     }
-
     #sty_ne {
         height: auto;
         padding-bottom: 15px;
@@ -189,8 +180,7 @@ h6 {
         font-weight: 500;
         margin-top: 6px;
     }
-
-    #sty_mapred{
+    #sty_mapred {
         height: auto;
     }
 }
@@ -233,6 +223,7 @@ h6 {
     width: 40px;
     border-radius: 15px;
 }
+
 #ic_ft2 {
     width: 15px;
     /* background-color: #810505; */
@@ -241,6 +232,7 @@ h6 {
     padding: 2px;
     margin-right: 2px;
 }
+
 #ic_ft1 {
     width: 15px;
     background-color: #810505;
@@ -253,7 +245,6 @@ h6 {
     #ft_h {
         font-size: 13px;
     }
-
     #ul_ft {
         padding: 0px 0px 0px 0px;
         color: #810505;
@@ -261,16 +252,13 @@ h6 {
         font-size: 10px;
         text-shadow: 1px 0px 0px #fff, 1px 1px 1px #fff;
     }
-
     #ic_ft {
         width: 20px;
         border-radius: 5px;
     }
-
     #ft_bg {
         height: 150px;
     }
-
     #ft_h {
         margin-top: 20px;
     }
@@ -316,7 +304,6 @@ h6 {
         display: flex;
         justify-content: center;
     }
-
     #mn {
         margin-left: 5px;
     }
@@ -326,7 +313,6 @@ h6 {
     .topnav a:not(:first-child) {
         display: none;
     }
-
     .topnav a.icon {
         float: right;
         display: block;
@@ -337,16 +323,49 @@ h6 {
     .topnav.responsive {
         position: relative;
     }
-
     .topnav.responsive .icon {
         position: absolute;
         right: 0;
         top: 0;
     }
-
     .topnav.responsive a {
         float: none;
         display: block;
         text-align: left;
+    }
+}
+
+#p_vi1 {
+    font-size: 36px;
+    font-weight: 600;
+    padding-top: 70px;
+}
+
+#p_vi2 {
+    font-size: 24px;
+    text-align: justify;
+    margin-right: 15px;
+}
+
+#map_vi {
+    width: 100%;
+    border-radius: 10px;
+    margin-top: 30px;
+    filter: drop-shadow(5px 5px 20px #422020);
+}
+
+@media screen and (max-width: 600px) {
+    #p_vi1 {
+        font-size: 16px;
+        font-weight: 600;
+        padding-top: 10px;
+    }
+    #p_vi2 {
+        font-size: 11px;
+        text-align: justify;
+        margin-right: 15px;
+    }
+    #map_vi {
+        margin-top: 100px;
     }
 }
